--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/native-stack": "^6.9.17",
     "expo": "~50.0.4",
+    "expo-app-loading": "^2.1.1",
+    "expo-font": "~11.10.2",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "firebase": "10.7.1",
     "react": "18.2.0",
@@ -23,8 +26,7 @@
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-svg": "^14.1.0",
-    "react-native-svg-transformer": "^1.3.0",
-    "expo-font": "~11.10.2"
+    "react-native-svg-transformer": "^1.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
