--- a/package.json
+++ b/package.json
@@ -25,8 +25,11 @@
     "react-native-reanimated": "^3.6.2",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-svg": "^14.1.0",
-    "react-native-svg-transformer": "^1.3.0"
+    "react-native-svg": "14.1.0",
+    "react-native-svg-transformer": "^1.3.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
